--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.9",
+        "@fullcalendar/daygrid": "^6.1.9",
         "fullcalendar": "^6.1.9"
     }
 }
